; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_duplicator-monitor-capture.c_reset_capture_data.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_duplicator-monitor-capture.c_reset_capture_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.duplicator_capture = type { i32, i32, i32, i32, i32, i32, i32 }
%struct.gs_monitor_info = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.duplicator_capture*)* @reset_capture_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_capture_data(%struct.duplicator_capture* %0) #0 {
  %2 = alloca %struct.duplicator_capture*, align 8
  %3 = alloca %struct.gs_monitor_info, align 4
  %4 = alloca i32*, align 8
  store %struct.duplicator_capture* %0, %struct.duplicator_capture** %2, align 8
  %5 = bitcast %struct.gs_monitor_info* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %5, i8 0, i64 16, i1 false)
  %6 = load %struct.duplicator_capture*, %struct.duplicator_capture** %2, align 8
  %7 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %6, i32 0, i32 6
  %8 = load i32, i32* %7, align 4
  %9 = call i32* @gs_duplicator_get_texture(i32 %8)
  store i32* %9, i32** %4, align 8
  %10 = load %struct.duplicator_capture*, %struct.duplicator_capture** %2, align 8
  %11 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %10, i32 0, i32 5
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @gs_get_duplicator_monitor_info(i32 %12, %struct.gs_monitor_info* %3)
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @gs_texture_get_width(i32* %14)
  %16 = load %struct.duplicator_capture*, %struct.duplicator_capture** %2, align 8
  %17 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %16, i32 0, i32 4
  store i32 %15, i32* %17, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @gs_texture_get_height(i32* %18)
  %20 = load %struct.duplicator_capture*, %struct.duplicator_capture** %2, align 8
  %21 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %20, i32 0, i32 3
  store i32 %19, i32* %21, align 4
  %22 = getelementptr inbounds %struct.gs_monitor_info, %struct.gs_monitor_info* %3, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.duplicator_capture*, %struct.duplicator_capture** %2, align 8
  %25 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %24, i32 0, i32 2
  store i32 %23, i32* %25, align 4
  %26 = getelementptr inbounds %struct.gs_monitor_info, %struct.gs_monitor_info* %3, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.duplicator_capture*, %struct.duplicator_capture** %2, align 8
  %29 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 4
  %30 = getelementptr inbounds %struct.gs_monitor_info, %struct.gs_monitor_info* %3, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.duplicator_capture*, %struct.duplicator_capture** %2, align 8
  %33 = getelementptr inbounds %struct.duplicator_capture, %struct.duplicator_capture* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 4
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32* @gs_duplicator_get_texture(i32) #2

declare dso_local i32 @gs_get_duplicator_monitor_info(i32, %struct.gs_monitor_info*) #2

declare dso_local i32 @gs_texture_get_width(i32*) #2

declare dso_local i32 @gs_texture_get_height(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
